--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
 
+h1{
+    color: gray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
+tr {
+    height: 30px;
+}
+.maindiv {
+    background-color: white;
+    color: black;
+    width: 500px;
+    padding: 20px;
+    margin-left: 20px;
+    border-radius: 25px;
+    box-align: center;
+}
+
+.input {
+    width: 350px;
+    padding: 10px;
+    margin: auto;
+}
+
+#result {
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
